src/test/compile-fail/borrowck-mut-addr-of-imm-var.rs
fn main() {
    let x: int = 3;
    let y: &mut int = &mut x; //! ERROR taking mut reference to immutable local variable
    *y = 5;
    log (debug, *y);
}
